syntax = "proto3";

option go_package = "github.com/hnamzian/goblock/internal/proto";

service Node {
    rpc Handshake(Version) returns (Version);
    rpc HandleTransaction(Transaction) returns (Ack);
}

message Ack {}

message Version {
    string Version = 1;
    int32 Height = 2;
    string Address = 3;
    repeated string Peers = 4;
}

message Block {
    Header header = 1;
    repeated Transaction transactions = 2;
}

message Header {
    int32 version = 1;
    int32 height = 2;
    bytes prevHash = 3;
    bytes rootHash = 4;
    int64 timestamp = 5;
}

message TxInput {
    bytes prevTxHash = 1;
    int32 prevTxIndex = 2;
    bytes pubkey = 3;
    bytes signature = 4;
}

message TxOutput {
    int32 value = 1;
    bytes address = 2;
}

message Transaction {
    int32 version = 1;
    repeated TxInput inputs = 2;
    repeated TxOutput outputs = 3;
}